@@ -3,6 +3,11 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.23rc1
 
+	- The hpgltops filter contained two buffer overflows
+	  that could potentially allow remote access to the "lp"
+	  account (STR #1024)
+	- The lppasswd command did not protect against file
+	  descriptor or ulimit attacks (STR #1023)
 	- The "lpc status" command used the wrong resource path
 	  when querying the list of printers and jobs, causing
 	  unnecessary authentication requests (STR #1018)
